--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/cheerio": "^0.22.35",
     "@types/puppeteer": "^5.4.7",
     "autoprefixer": "10.4.20",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
